--- a/src/ApiCore/LongRunning/resources/operations_client_config.json
+++ b/src/ApiCore/LongRunning/resources/operations_client_config.json
@@ -1,46 +1,59 @@
 {
-  "interfaces": {
-    "google.longrunning.Operations": {
-      "retry_codes": {
-        "idempotent": [
-          "DEADLINE_EXCEEDED",
-          "UNAVAILABLE"
-        ],
-        "non_idempotent": []
-      },
-      "retry_params": {
-        "default": {
-          "initial_retry_delay_millis": 100,
-          "retry_delay_multiplier": 1.3,
-          "max_retry_delay_millis": 60000,
-          "initial_rpc_timeout_millis": 90000,
-          "rpc_timeout_multiplier": 1.0,
-          "max_rpc_timeout_millis": 90000,
-          "total_timeout_millis": 600000
+    "interfaces": {
+        "google.longrunning.Operations": {
+            "retry_codes": {
+                "no_retry_codes": [],
+                "retry_policy_1_codes": [
+                    "UNAVAILABLE"
+                ]
+            },
+            "retry_params": {
+                "no_retry_params": {
+                    "initial_retry_delay_millis": 0,
+                    "retry_delay_multiplier": 0.0,
+                    "max_retry_delay_millis": 0,
+                    "initial_rpc_timeout_millis": 0,
+                    "rpc_timeout_multiplier": 1.0,
+                    "max_rpc_timeout_millis": 0,
+                    "total_timeout_millis": 0
+                },
+                "retry_policy_1_params": {
+                    "initial_retry_delay_millis": 500,
+                    "retry_delay_multiplier": 2.0,
+                    "max_retry_delay_millis": 10000,
+                    "initial_rpc_timeout_millis": 10000,
+                    "rpc_timeout_multiplier": 1.0,
+                    "max_rpc_timeout_millis": 10000,
+                    "total_timeout_millis": 10000
+                }
+            },
+            "methods": {
+                "CancelOperation": {
+                    "timeout_millis": 10000,
+                    "retry_codes_name": "retry_policy_1_codes",
+                    "retry_params_name": "retry_policy_1_params"
+                },
+                "DeleteOperation": {
+                    "timeout_millis": 10000,
+                    "retry_codes_name": "retry_policy_1_codes",
+                    "retry_params_name": "retry_policy_1_params"
+                },
+                "GetOperation": {
+                    "timeout_millis": 10000,
+                    "retry_codes_name": "retry_policy_1_codes",
+                    "retry_params_name": "retry_policy_1_params"
+                },
+                "ListOperations": {
+                    "timeout_millis": 10000,
+                    "retry_codes_name": "retry_policy_1_codes",
+                    "retry_params_name": "retry_policy_1_params"
+                },
+                "WaitOperation": {
+                    "timeout_millis": 60000,
+                    "retry_codes_name": "no_retry_codes",
+                    "retry_params_name": "no_retry_params"
+                }
+            }
         }
-      },
-      "methods": {
-        "GetOperation": {
-          "timeout_millis": 60000,
-          "retry_codes_name": "idempotent",
-          "retry_params_name": "default"
-        },
-        "ListOperations": {
-          "timeout_millis": 60000,
-          "retry_codes_name": "idempotent",
-          "retry_params_name": "default"
-        },
-        "CancelOperation": {
-          "timeout_millis": 60000,
-          "retry_codes_name": "idempotent",
-          "retry_params_name": "default"
-        },
-        "DeleteOperation": {
-          "timeout_millis": 60000,
-          "retry_codes_name": "idempotent",
-          "retry_params_name": "default"
-        }
-      }
     }
-  }
 }
