--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit colors="true">
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" colors="true" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+  <coverage>
+    <include>
+      <directory suffix=".php">src</directory>
+    </include>
+    <exclude>
+      <directory suffix=".php">src/ApiCore/LongRunning</directory>
+      <directory suffix=".php">src/LongRunning</directory>
+    </exclude>
+  </coverage>
   <testsuites>
     <testsuite name="Unit Test Suite">
       <directory>tests/Unit</directory>
     </testsuite>
   </testsuites>
-  <filter>
-    <whitelist>
-      <directory suffix=".php">src</directory>
-      <exclude>
-        <directory suffix=".php">src/ApiCore/LongRunning</directory>
-        <directory suffix=".php">src/LongRunning</directory>
-      </exclude>
-    </whitelist>
-  </filter>
 </phpunit>
